--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "lint-styles": "stylelint \"src/**/*.css\" \"src/**/*.scss\""
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-boost": "^0.4.9",
+    "apollo-client": "^2.6.10",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
@@ -40,6 +43,7 @@
     "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-transformer-sharp": "^2.5.13",
+    "graphql": "^15.5.0",
     "postcss-import": "^12.0.1",
     "precss": "^4.0.0",
     "prop-types": "^15.7.2",
