--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "apollo-boost": "^0.4.9",
     "apollo-client": "^2.6.10",
     "babel-polyfill": "^6.26.0",
@@ -44,10 +46,10 @@
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-transformer-sharp": "^2.5.13",
     "graphql": "^15.5.0",
+    "material-table": "1.61.0",
     "postcss-import": "^12.0.1",
     "precss": "^4.0.0",
     "prop-types": "^15.7.2",
-    "raf": "^3.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0"
