update eslint config

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
     "plugin:prettier/recommended",
     "prettier/@typescript-eslint"
   ],
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["@typescript-eslint"],
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module"
@@ -16,22 +16,6 @@
   },
   "rules": {
     "quotes": "off",
-    "@typescript-eslint/quotes": [
-      2,
-      "backtick",
-      {
-        "avoidEscape": true
-      }
-    ],
-    "indent": ["error", 2, { "SwitchCase": 1 }],
-    "prettier/prettier": [
-      "error",
-      {
-        "trailingComma": "es5",
-        "semi": false,
-        "singleQuote": false,
-        "printWidth": 120
-      }
-    ]
+    "indent": ["error", 2, { "SwitchCase": 1 }]
   }
 }
