--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@apollo/react-hooks": "^4.0.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
     "apollo-boost": "^0.4.9",
     "apollo-client": "^2.6.10",
     "babel-polyfill": "^6.26.0",
